Update generated files with latest swagger spec
