# demo-swagger/swagger.yml
@@ -1,22 +1,20 @@
----
 swagger: "2.0"
 info:
-  description: From the todo list tutorial on goswagger.io
+  description: From the todo list tutorial gojek
   title: A Todo list application
   version: 1.0.0
 consumes:
-- application/io.goswagger.examples.todo-list.v1+json
+- application/com.gojek.todo-list.v1+json
 produces:
-- application/io.goswagger.examples.todo-list.v1+json
+- application/com.gojek.todo-list.v1+json
 schemes:
 - http
-- https
 paths:
   /:
     get:
       tags:
         - todos
-      operationId: findTodos
+      operationId: find_todos
       parameters:
         - name: since
           in: query
@@ -64,8 +62,7 @@ paths:
         in: path
         required: true
     put:
-      tags:
-        - todos
+      tags: ["todos"]
       operationId: updateOne
       parameters:
         - name: body
@@ -73,7 +70,7 @@ paths:
           schema:
             $ref: "#/definitions/item"
       responses:
-        200:
+        '200':
           description: OK
           schema:
             $ref: "#/definitions/item"
@@ -85,6 +82,12 @@ paths:
       tags:
         - todos
       operationId: destroyOne
+      parameters:
+        - type: integer
+          format: int64
+          name: id
+          in: path
+          required: true
       responses:
         204:
           description: Deleted
